--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -24,7 +24,7 @@
 }
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
-#ball + [src="images/kitty-4.png"] {
+#ball ~ [src="images/kitty-4.png"] {
   position: absolute;
   z-index: 4;
   top: 260px;
@@ -32,7 +32,7 @@
 }
 
 /* Select the image that has an alt attribute value matching "Kitty 5" (using attribute selector) */
-[src="images/kitty-5.png"] {
+[alt="Kitty 5"] {
   position: absolute;
   z-index: 3;
   top: 217px;
